# docs/swagger.json
@@ -235,6 +235,68 @@
         }
       }
     },
+    "/media/images": {
+      "post": {
+        "tags": ["media"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/ImagesUploadRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Lista de imagenes",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ImagesUploadResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Datos no validos",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "No autorizado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error interno del servidor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/news": {
       "get": {
         "tags": ["news"],
@@ -794,7 +856,7 @@
           "data": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/Faq"
+              "$ref": "#/components/schemas/FaqResponse"
             }
           }
         }
@@ -876,6 +938,38 @@
               "sale_id": {
                 "type": "integer",
                 "description": "Identificador de la oferta"
+              }
+            }
+          }
+        }
+      },
+      "ImagesUploadRequest": {
+        "type": "object",
+        "properties": {
+          "image": {
+            "type": "string",
+            "format": "binary",
+            "description": "Imagen"
+          }
+        },
+        "required": ["image"]
+      },
+      "ImagesUploadResponse": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "type": "integer",
+            "description": "Codigo de estado de la respuesta"
+          },
+          "data": {
+            "type": "object",
+            "properties": {
+              "images": {
+                "type": "array",
+                "items": {
+                  "type": "string",
+                  "description": "Enlace a la imagen subida"
+                }
               }
             }
           }
